...
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="130dp" />

    <ImageView
        android:id="@+id/btPlay"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        app:srcCompat="@android:drawable/ic_media_pause" />
...
        android:layout_height="60dp"
        android:layout_alignTop="@+id/btPlay"
        android:layout_toEndOf="@+id/btPlay"
        app:srcCompat="@android:drawable/ic_media_ff" />

    <ImageView
        android:id="@+id/btNxt"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignTop="@+id/btPlay"
        android:layout_toEndOf="@+id/btFF"
        app:srcCompat="@android:drawable/ic_media_next" />

...
